--- a/style.css
+++ b/style.css
@@ -3,33 +3,55 @@ body {
     margin: 0;
     padding: 0;
 }
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 20px;
-}
-.column {
+
+div.column {
     width: 30%;
     margin-bottom: 20px;
     background-color: #f0f0f0;
     border-radius: 0px;
     padding: 20px;
 }
-.button {
-    position: rj;
+button .button {
+    position: relative;
     right: 20px;
     bottom: 20px;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #0a519c;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
-div#book {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+div.throne {
+    display: grid;
+    place-items: center;
 }
+
+.book {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 300px;
+}
+
+.column:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.leftbook, .rightbook {
+    width: 25%;
+}
+
+.middlebook {
+    width: 50%;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
