--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Code+Pro&display=swap");
 
 body {
+    position: relative;
     width: 100vw;
     height: 100vh;
     margin: 0 ;
@@ -41,6 +42,14 @@ body {
     display: grid;
   }
 
+  main {
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+    height: 90vh;
+    position: relative;
+  }
+
   #work {
     background-size: cover;
     background-position: center;
@@ -56,6 +65,7 @@ body {
     margin-top: 365px;
   }
   .next {
+    background-color: blue;
     width: 320px;
     height: 930px;
   }
@@ -72,9 +82,31 @@ body {
   #workvid {
     width: 100%;
     height: 100%;
+    position: fixed;
+    z-index: -1;
   }
 
   #workvid img{
-    width: 100;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 100%;
     height: 100%;
+    z-index: -1;
   }
+
+  .work .right { 
+    position: absolute;
+    z-index: 1;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  #arrow {
+    position: absolute;
+    font-size: 80px;
+  }
+
