--- a/main.css
+++ b/main.css
@@ -14,41 +14,51 @@ main {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 1rem;
   font-size: 1.5rem;
+
   h1 {
     margin: 0;
     font-weight: 900;
-    color: #fff;
+    color: #000000;
+    text-decoration: none;
     span {
       color: black;
-      font-weight: lighter;
+      font-weight: normal;
+      font-size: 2rem;
     }
+  }
+
+  nav {
+    display: flex;
+    column-gap: 2rem;
   }
 
   nav a {
     text-decoration: none;
     color: #000000;
   }
+
+  nav a:hover {
+    color: yellow;
+  }
 }
 
 section {
   background-color: #f0f0f0;
-  flex-grow: 1;
+  flex-grow: 0.95;
   display: flex;
   justify-content: space-between;
   align-items: center;
   a {
     text-decoration: none;
     color: yellow;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     padding: 1rem;
     display: block;
     transition: all 0.8s;
 
-    svg {
-      fill: #ffff44;
-    }
     &:hover {
       background-color: yellow;
       color: black;
@@ -60,11 +70,75 @@ section {
   }
 }
 
-section#one {
-  background-image: url("./content/khafre/khafre-front-cover.png");
+#three {
+  background-image: url(img/Throneroom-Sfiso.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 50% 50%;
+  flex-grow: 0.95;
+  display: flex;
+  justify-content: space-between;
+  column-gap: 5rem;
+  align-items: center;
+  padding: 1rem;
+}
+
+#four {
+  background-image: url(img/poster.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 50% 50%;
+  flex-grow: 0.95;
+  display: flex;
+  justify-content: space-between;
+  column-gap: 5rem;
+  align-items: center;
+  padding: 1rem;
+}
+
+#text {
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+a#logo {
+  text-decoration: none;
+  color: #000000;
+
+  &:hover {
+    color: rgb(240, 5, 5);
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+}
+
+#book {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+#poster {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+section#one {
+  background-image: url("img/poster.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 50% 50%;
+
+  &:hover {
+    outline: 10px solid rgba(255, 187, 0, 0.938);
+
+    img {
+      transform: scale(0.15);
+      transition: transform 0.5s ease-out;
+
+      &:hover {
+        transform: scale(1);
+      }
+    }
+  }
 }
 
 section#two {
@@ -72,4 +146,33 @@ section#two {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 50% 50%;
+  transition: outline 0.5s ease-out;
+  outline: 10px solid transparent;
+
+  &:hover {
+    outline: 10px solid rgba(255, 187, 0, 0.938);
+
+    img {
+      transform: scale(0.15);
+      transition: transform 0.5s ease-out;
+
+      &:hover {
+        transform: scale(1);
+      }
+    }
+  }
+}
+
+section#two img {
+  width: 100%;
+  transition: outline 0.5s ease-out;
+  position: relative;
+  img {
+    width: 50%;
+    display: block;
+  }
+}
+
+#four:hover {
+  outline: 10px solid rgba(255, 187, 0, 0.938);
 }
